microbenchmark not quite working